//for java
option java_package = "com.alibaba.dubbo.rpc.protocol.protobuf.proto";
option java_outer_classname = "DemoProto";

//for c++
//package voicegame;

message EchoRequest {
    required int32 data = 1;
}

message EchoResponse {
    required int32 result = 1;
}

service DemoService {
    rpc Echo(EchoRequest) returns (EchoResponse);
}

option java_generic_services = true;
